Never mind, it was a small bug of using 'ind' instead of 'rowIndex' (which took me way too long to find).

--- a/dir_uploads/up_directories/mastermind_app_01/style.css
+++ b/dir_uploads/up_directories/mastermind_app_01/style.css
@@ -37,6 +37,9 @@
   grid-template-rows: 1fr 1fr;
 }
 
+.peg {
+  text-align: center;
+}
 .peg::after {
   content: "o";
 }
